--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "botkit": "^0.6.14",
-    "http": "0.0.0",
     "https": "^1.0.0",
-    "jsforce": "^1.8.4",
     "nforce": "^1.10.0",
     "querystring": "^0.2.0",
-    "slack": "^11.0.0",
+    "request": "^2.87.0",
     "slackbots": "^1.1.0"
   }
 }
