--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "botkit": "^0.6.14",
     "dotenv": "^6.0.0",
     "https": "^1.0.0",
+    "lodash": "^4.17.10",
     "nforce": "^1.10.0",
     "querystring": "^0.2.0",
     "request": "^2.87.0",
