--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.18.0",
     "botkit": "^0.6.14",
     "dotenv": "^6.0.0",
+    "fs": "0.0.1-security",
     "https": "^1.0.0",
     "lodash": "^4.17.10",
     "nforce": "^1.10.0",
+    "path": "^0.12.7",
     "querystring": "^0.2.0",
     "request": "^2.87.0",
     "slackbots": "^1.1.0"
