--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fs": "0.0.1-security",
     "https": "^1.0.0",
     "lodash": "^4.17.10",
-    "nforce": "^1.10.0",
+    "nforce": "file:modules/nforce",
+    "node-env-file": "^0.1.8",
     "path": "^0.12.7",
     "querystring": "^0.2.0",
     "request": "^2.87.0",
