--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   "dependencies": {
     "axios": "^0.18.0",
     "botkit": "^0.6.14",
+    "debug": "^3.1.0",
     "dotenv": "^6.0.0",
+    "express-hbs": "^1.0.4",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
     "lodash": "^4.17.10",
     "nforce": "file:modules/nforce",
     "node-env-file": "^0.1.8",
+    "nodemailer": "^4.6.7",
+    "oauth": "file:modules\\oauth",
     "path": "^0.12.7",
     "querystring": "^0.2.0",
     "request": "^2.87.0",
-    "slackbots": "^1.1.0"
+    "slackbots": "^1.1.0",
+    "util": "^0.11.0",
+    "wordfilter": "^0.2.6"
   }
 }
