--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "jokebot",
+  "name": "codette",
   "version": "1.0.0",
-  "description": "",
+  "description": "Slack integrated bot",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "deploy": "gcloud app deploy --quiet --version=040"
   },
   "keywords": [],
-  "author": "",
+  "author": "Chizzy",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
@@ -29,5 +30,12 @@
     "slackbots": "^1.1.0",
     "util": "^0.11.0",
     "wordfilter": "^0.2.6"
+  },
+  "engines": {
+    "node": "8.11.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git clone https://github.com/tehchizad/slackbot"
   }
 }
