--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "wordfilter": "^0.2.6"
   },
   "engines": {
-    "node": "8.11.0"
+    "node": ">=8.9.0"
   },
   "repository": {
     "type": "git",
